# CCUID

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  README.md  pyproject.toml  ruff.toml
CCUID/: __init__.py
CCUID/cc_admin/: __init__.py  admin_service.py
CCUID/cc_chat/: __init__.py  service.py
CCUID/cc_config/: cc_config.py  config_default.py  prefix.py
CCUID/cc_help/: __init__.py  get_help.py  help.json
CCUID/cc_start/: __init__.py
CCUID/cc_status/: __init__.py  status_service.py
CCUID/utils/: attachments.py  auth.py  database.py  engines.py  image.py  mode.py  msgs.py  output.py  prompt_queue.py  render.py  session.py
CCUID/utils/acp/: backend.py  client.py  content.py  events.py  orphans.py  policy.py
CCUID/utils/render_assets/: chat.css  chat.html.j2  chat.js
CCUID/utils/resource/: RESOURCE_PATH.py
