[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "CCUID"
version = "1.0.0"
description = "通过 ACP 调用 Claude Code / Codex 等 coding agent 的 gsuid_core 插件"
authors = [{name = "tyql688"}]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11, <4.0"
dependencies = [
    "agent-client-protocol>=0.10",
    "markdown>=3.10",
    "playwright>=1.58.0",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21.0",
]

[tool.pyright]
include = ["CCUID"]
exclude = ["**/__pycache__", ".venv"]
venvPath = "../../.."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
